feat: get usert topics and topic chapters
